--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,18 +1,18 @@
+
 name: Fast API docker build push
-on: 
+on:
   push:
-    branches:[ main ]
-    
+    branches: [ main ]
 jobs:
   build:
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Build docker img for FastApi
-      run: docker build -t '${{secrets.DOCKER_USERNAME}'/fastapi-docker:'#{{github.sha}}' .
+    - name: Build the FastAPI Docker image
+      run: docker build -t '${{secrets.DOCKER_LOGIN}}'/fastapi-docker-workflow:'${{github.sha}}' .
+      
+    - name: Login to docker
+      run: docker login --username '${{secrets.DOCKER_LOGIN}}' --password '${{secrets.DOCKER_PASSWORD}}'
 
-    - name: Loggin to the Docker hub
-      run: docker login --username username '${{secrets.DOCKER_USERNAME}}' --password '${{secrets.DOCKER_PASSWORD}}'
-    
-    - name: Push the image to the docker hub
-      run: docker push '{{secrets.DOCKER_USERNAME}'/fastapi-docker:'#{{github.sha}}'
+    - name: Push the docker image
+      run: docker push '${{secrets.DOCKER_LOGIN}}'/fastapi-docker-workflow:'${{github.sha}}'
